// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'should correctly render the expenses summary with multiple expenses 1`] = `
<div>
  <h1>
     viewing 
    23
     
    expenses
     totalling 
    $555.55
  </h1>
</div>
`;

exports[`should correctly render the expenses summary with one expense 1`] = `
<div>
  <h1>
     viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
